objects/APTS_Attribute_Settings__c.object
<CustomObject>
    <fields>
        <fullName>APTS_API_Method_Name__c</fullName>
        <label>API Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Attribute_Combination__c</fullName>
        <label>Attribute Combination</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Attribute_Combt_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attribute Combination Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Dependent_Attribute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dependent Attribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <label>APTS External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Filtered_Based_On__c</fullName>
        <label>Filtered Based On</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Defaulted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Defaulted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_UI_Selection_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UI Selection Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Attribute Settings</relationshipLabel>
        <relationshipName>Attribute_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attribute Settings</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>